[gd_scene load_steps=18 format=3 uid="uid://b6esgdmciuv7n"]

[ext_resource type="Texture2D" uid="uid://b0xltc2iphdel" path="res://assets/NeoShooterLogo.svg" id="1_clxpc"]
[ext_resource type="Script" path="res://levels/main_menu.gd" id="1_f6xqg"]
[ext_resource type="Script" path="res://custom-stuff/tweened_button.gd" id="2_2ycbh"]
[ext_resource type="Theme" uid="uid://dbukeuyrs33sq" path="res://custom-stuff/default_theme.tres" id="2_b7fev"]
[ext_resource type="PackedScene" uid="uid://df7t4mmry7iih" path="res://levels/scenes/option_btn.tscn" id="5_l3fxr"]
[ext_resource type="Shader" path="res://levels/glow.gdshader" id="6_71mhu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v23gp"]
bg_color = Color(0.352941, 0.305882, 0.266667, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hg5yq"]
bg_color = Color(0.2, 0.223529, 0.254902, 1)
corner_radius_top_right = 20
corner_radius_bottom_right = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kjvgm"]
bg_color = Color(0.231373, 0.0901961, 0.145098, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20
shadow_size = 10
shadow_offset = Vector2(10, 10)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hiiyd"]
resource_local_to_scene = true
shader = ExtResource("6_71mhu")
shader_parameter/glow_color = Color(0.12549, 0.839216, 0.780392, 1)
shader_parameter/glow_power = 2.0
shader_parameter/glow_shift = 1.0
shader_parameter/glow_radius = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vihq8"]
resource_local_to_scene = true
shader = ExtResource("6_71mhu")
shader_parameter/glow_color = Color(0.12549, 0.839216, 0.780392, 1)
shader_parameter/glow_power = 2.0
shader_parameter/glow_shift = 1.0
shader_parameter/glow_radius = 1.0

[sub_resource type="Animation" id="Animation_7fjac"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("CanvasLayer/MainBtn:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(386, 389)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("CanvasLayer/OptionBtn:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1300, 148)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/path = NodePath("CanvasLayer/OptionBtn:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/path = NodePath("CanvasLayer/MainBtn:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/LogoMainMenu:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CanvasLayer/Options Label:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1168, 3)]
}

[sub_resource type="Animation" id="Animation_126t0"]
resource_name = "main_to_option"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/MainBtn:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.466667),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(381, 249), Vector2(377, 814)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/OptionBtn:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.466667),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(1300, 59), Vector2(76, 59)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/OptionBtn:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/MainBtn:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.433333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/LogoMainMenu:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -456)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CanvasLayer/Options Label:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-1265, 0), Vector2(0, 0)]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [true],
"method": &"main_menu_grab_focus"
}, {
"args": [],
"method": &"option_menu_grab_focus"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ok511"]
_data = {
"RESET": SubResource("Animation_7fjac"),
"main_to_option": SubResource("Animation_126t0")
}

[sub_resource type="Animation" id="Animation_7v2o3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/BGPink:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_qp3rm"]
resource_name = "loop"
length = 10.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/BGPink:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 10),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pvkws"]
_data = {
"RESET": SubResource("Animation_7v2o3"),
"loop": SubResource("Animation_qp3rm")
}

[node name="MainMenu" type="Control" groups=["MainMenu"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = 2.0
offset_right = -1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f6xqg")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="BGGray" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0784314, 0.0627451, 0.0745098, 1)

[node name="BGGray2" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 812.306
offset_top = -331.313
offset_right = 360.306
offset_bottom = 320.687
grow_horizontal = 2
grow_vertical = 2
rotation = 0.785398
color = Color(0.258824, 0.223529, 0.203922, 1)

[node name="Stick" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 560.876
offset_top = -104.085
offset_right = -541.124
offset_bottom = 247.915
grow_horizontal = 2
grow_vertical = 2
rotation = 0.785398
color = Color(0.196078, 0.168627, 0.156863, 1)

[node name="Stick2" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1368.0
offset_top = 55.0001
offset_right = 266.0
offset_bottom = 407.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.785398
color = Color(0.196078, 0.168627, 0.156863, 1)

[node name="BGPink" type="Panel" parent="CanvasLayer"]
custom_minimum_size = Vector2(400, 400)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -143.0
offset_right = 200.0
offset_bottom = 257.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(200, 200)
theme_override_styles/panel = SubResource("StyleBoxFlat_v23gp")

[node name="Text" type="Panel" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -118.0
offset_right = 76.0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_hg5yq")

[node name="KeyBindsLabel" type="Label" parent="CanvasLayer/Text"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -47.5
offset_right = 35.0
offset_bottom = 47.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 8
text = "[Up] or [W]
[Down] or [S]
[Left] or [A]
[Right] or [D]
[Enter] or [E]
[Esc] for back
Vim bindings
work too"

[node name="LogoMainMenu" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="BG2" type="ColorRect" parent="CanvasLayer/LogoMainMenu"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 142.0
grow_horizontal = 2
color = Color(0.0235294, 0.0235294, 0.0313726, 1)

[node name="HBOX" type="HBoxContainer" parent="CanvasLayer/LogoMainMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -423.5
offset_right = 423.5
offset_bottom = 128.0
grow_horizontal = 2
theme_override_constants/separation = 100

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/LogoMainMenu/HBOX"]
layout_mode = 2
texture = ExtResource("1_clxpc")

[node name="GameName" type="Label" parent="CanvasLayer/LogoMainMenu/HBOX"]
layout_mode = 2
theme_override_colors/font_color = Color(0.47451, 0.227451, 0.501961, 1)
theme_override_colors/font_shadow_color = Color(0.0235294, 0.0235294, 0.0313726, 1)
theme_override_font_sizes/font_size = 100
text = "NeoShooter"

[node name="Options Label" type="Label" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_left = -1168.0
offset_top = 3.0
offset_right = -1168.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 30
text = "--------- Settings ---------"
horizontal_alignment = 1

[node name="MainBtn" type="Panel" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -195.0
offset_top = -75.0
offset_right = 185.0
offset_bottom = 184.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kjvgm")

[node name="VBOX" type="VBoxContainer" parent="CanvasLayer/MainBtn"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -156.0
offset_right = 161.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="TutorialButton" type="Button" parent="CanvasLayer/MainBtn/VBOX"]
visible = false
layout_mode = 2
theme = ExtResource("2_b7fev")
text = "Tutorial"
script = ExtResource("2_2ycbh")

[node name="PlayButton" type="Button" parent="CanvasLayer/MainBtn/VBOX"]
layout_mode = 2
theme = ExtResource("2_b7fev")
text = "Play Local"
script = ExtResource("2_2ycbh")

[node name="OptionsButton" type="Button" parent="CanvasLayer/MainBtn/VBOX"]
layout_mode = 2
text = "Options
"
script = ExtResource("2_2ycbh")

[node name="QuitButton" type="Button" parent="CanvasLayer/MainBtn/VBOX"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../PlayButton")
text = "Quit
"
script = ExtResource("2_2ycbh")

[node name="OptionBtn" parent="CanvasLayer" instance=ExtResource("5_l3fxr")]
visible = false
offset_left = 724.0
offset_top = -265.0
offset_right = 1724.0
offset_bottom = 324.0

[node name="Label" parent="CanvasLayer/OptionBtn/TabContainer/Effects/Settings/Glow" index="0"]
material = SubResource("ShaderMaterial_hiiyd")

[node name="Label" parent="CanvasLayer/OptionBtn/TabContainer/Effects/Settings/Hit Effect" index="0"]
material = SubResource("ShaderMaterial_vihq8")

[node name="AniPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ok511")
}

[node name="BGAniPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pvkws")
}
autoplay = "loop"

[connection signal="pressed" from="CanvasLayer/MainBtn/VBOX/TutorialButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainBtn/VBOX/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainBtn/VBOX/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainBtn/VBOX/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="CanvasLayer/OptionBtn/Back" to="." method="_on_back_pressed"]

[editable path="CanvasLayer/OptionBtn"]
